[gd_scene load_steps=8 format=3 uid="uid://c0q6vx2i5hoaw"]

[ext_resource type="Script" path="res://entity/enemy/enemy_drops/experience/experience_gem.gd" id="1_fxl5l"]
[ext_resource type="Texture2D" uid="uid://dcxnv20br32tg" path="res://entity/enemy/enemy_drops/experience/cans.png" id="2_utpxc"]

[sub_resource type="Gradient" id="Gradient_hm71d"]
offsets = PackedFloat32Array(0, 0.653992)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jrmmo"]
gradient = SubResource("Gradient_hm71d")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_erfk8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mj7ql"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a8w37"]
radius = 128.0

[node name="ExperienceGem" type="RigidBody2D" groups=["experience", "level_clear", "xp"]]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_fxl5l")
base_tracking_speed = 600

[node name="Glow" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_jrmmo")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_utpxc")
hframes = 6
region_rect = Rect2(0, 0, 32, 88)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="AccelerationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_erfk8")

[node name="PickupRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="PickupShape" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource("CircleShape2D_mj7ql")

[node name="ClumpRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClumpRange"]
shape = SubResource("CircleShape2D_a8w37")

[node name="debug_stuff" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -8.0

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="AccelerationTimer" to="." method="_on_acceleration_timer_timeout"]
